[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-session = "3.0.0"
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-s3 = "0.29.0"
chrono = { version = "0.4.26", features = ["serde"] }
headers = "0.3"
http = "0.2"
futures = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
mockall = "0.11"
oauth2 = "4.1"
redis = "0.23.2"
reqwest = { version = "0.11.20" , features = ["json"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.3", features = ["add-extension", "trace", "cors", "fs"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

[dependencies.axum]
version = "0.6.20"
features = ["headers", "json", "multipart", "tracing" ]

[dependencies.sqlx]
version = "0.7.1"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"]

